<resources>

    <string name="app_name">DiTalent</string>

    <!--  Text Boarding  -->
    <string name="text_button_skip">Skip Dulu, Langsung Masuk</string>
    <string name="text_button_next">Slide Selanjutnya</string>
    <string name="image_boarding">Image boarding</string>
    <string name="text_button_login_now">Masuk Sekarang</string>
    <string name="text_button_login_using_google">Masuk Dengan Google</string>

    <string name="title_slide_one"><![CDATA[<font color=#87000000>Apa itu </font> <font color=#FF903F>DiTalent?</font>]]></string>
    <string name="title_slide_two"><![CDATA[<font color=#87000000>Kenapa harus </font> <font color=#FF903F>kolaborasi?</font>]]></string>
    <string name="title_slide_three"><![CDATA[<font color=#87000000>Mengapa harus</font> <font color=#FF903F>DiTalent?</font>]]></string>

    <string name="description_slide_one">DiTalent adalah platform yang menyatukan influencer dan pemain umkm untuk menciptakan kolaborasi yang lebih otentik.</string>
    <string name="description_slide_two">Kami percaya pada kekuatan manusia dan dampak yang bisa mereka miliki ketika mereka berkolaborasi dalam konteks yang tepat.</string>
    <string name="description_slide_three">DiTalent menghubungkan influencer dan pemain ukm dalam satu tempat, sehingga Anda dapat menemukan pasangan yang sempurna..</string>

    <string name="text_first_run_about_app">DiTalent platform yang menyatukan influencer dan pemain umkm untuk menciptakan kolaborasi yang lebih otentik.</string>

    <string name="text_about_app">DiTalent adalah platform yang menyatukan influencer dan pemain umkm untuk menciptakan kolaborasi yang lebih otentik. Kami percaya pada kekuatan manusia dan dampak yang bisa mereka miliki ketika mereka berkolaborasi dalam konteks yang tepat. DiTalent menghubungkan influencer dan pemain ukm dalam satu tempat, sehingga Anda dapat menemukan pasangan yang sempurna.</string>

    <!-- Text login  -->
    <string name="login">Login</string>
    <string name="description_page_login">Selamat datang! Mari masuk dan nikmati kolaborasi umkm dan talent.</string>
    <string name="enter">Masuk</string>
    <string name="logo">logo</string>
    <string name="email">Email</string>

    <string name="field_no_valid">%s tidak valid</string>
    <string name="password_rules_length">Kata sandi harus setidaknya 6 karakter</string>
    <string name="hint_email">Masukan email kamu</string>
    <string name="hint_password">Masukan password kamu</string>
    <string name="password">Password</string>
    <string name="forgot_password">Lupa Password ?</string>
    <string name="dont_have_a_account">Kamu belom punya akun?</string>
    <string name="choose_your_role">Pilih role kamu ya</string>
    <string name="or">OR</string>
    <string name="cancel">Batal</string>
    <string name="next">Lanjutkan</string>

    <!--  Text register  -->
    <string name="registrasi">Registrasi</string>
    <string name="name">Nama</string>
    <string name="no_phone">Nomor Hp</string>
    <string name="description_page_register">Selamat datang! Mari daftar dan nikmati kolaborasi umkm dan talent.</string>
    <string name="sign_up">Daftar</string>
    <string name="hint_name_talent">Masukan nama kamu</string>
    <string name="hint_name_umkm">Masukan nama toko kamu</string>
    <string name="hint_no_phone">Masukan nomor telepon kamu</string>
    <string name="umkm">Umkm</string>
    <string name="talent">Talent</string>
    <string name="you_have_a_account">Kamu sudah punya akun?</string>
    <string name="user">Pengguna</string>
    <string name="prefix_no_phone">+62  </string>


    <!--  Text error message  -->
    <string name="text_message_error_server">Maaf, ada kesalahan dari server</string>
    <string name="text_message_error_internet_connection">Tidak dapat menjangkau server, periksa koneksi internet Anda!</string>
    <string name="text_message_error_something">Maaf, ada keselahan tidak terduga</string>
    <string name="text_message_error_auth_something_wrong">Hmm, email/password kamu salah.</string>
    <string name="text_message_error_field_cant_empty">%s tidak boleh kosong</string>
    <string name="text_result_login_success">Berhasil login</string>
    <string name="text_result_register_success">Berhasil register</string>
    <string name="text_result_logout_success">Berhasil logout</string>
    <string name="text_result_logout_failed">Gagal logout</string>


    <string name="please_wait">Mohon Tunggu…</string>

    <!--  Menu  -->
    <string name="home">Home</string>
    <string name="project">Project</string>
    <string name="reward">Reward</string>
    <string name="profil">Profile</string>
    <string name="chart">Chart</string>

    <!--  Reward  -->
    <string name="reward_title">Reward Saya</string>
    <string name="total_points">Total Point Aktif</string>
    <string name="points">0</string>
    <string name="special_reward">Special Reward</string>


    <!-- Detail Reward   -->
    <string name="reward_title_detail">Detail Reward</string>
    <string name="points_needs">Point Needs</string>
    <string name="desc_point_needs">Membutuhkan 200 Point Penukaran.</string>
    <string name="desc">Deskripsi</string>
    <string name="desc_loremipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</string>
    <string name="SnK">Syarat &amp; Ketentuan</string>
    <string name="SnK_desc">- Hanya dapat di claim satu kali \n- Memiliki masa aktif 7 hari setelah claim \n- Tidak dapat diperjual Belikan</string>
    <string name="image_reward">Image reward</string>


    <!--  cta  -->
    <string name="cta_more">Selengkapnya</string>

    <!-- btn -->
    <string name="btn_claim">Claim</string>
    <string name="btn_selesai">Selesai</string>

    <!-- Confirmation   -->
    <string name="confirmation_success">Success Confirmation</string>
    <string name="confirmation_success_reward_title">Selamat</string>
    <string name="confirmation_success_reward_desc">Reward Anda telah diaktifkan</string>
    <string name="content_desc_confirmation">ilustration for confrimation</string>
    <string name="title_reward_1">Kumpulkan 50 point, dapatkan tripod hp menarik</string>
    <string name="title_reward_2">Kumpulkan 120 point, dapatkan light ring menarik</string>
    <string name="title_reward_3">Kumpulkan 200 point, dapatkan webcam menarik</string>

    <!-- Home Influencer    -->
    <string name="greeting_user">Hai, %s</string>
    <string name="content_desc_iv_reward">Gambar detail rewards</string>
    <string name="content_desc_iv_back">Icon untuk kembali</string>
    <string name="content_desc_iv_project">Gambar project</string>
    <string name="about_app">Tentang DiTalent</string>
    <string name="image_greeting_talent">Image greeting talent</string>

    <!-- Profile Influencer  -->
    <string name="year_age">%s Tahun</string>
    <string name="about_user">%s | %s</string>

    <!--  New Project UMKM  -->
    <string name="new_project">Project Baru</string>

    <!--  Text Dummy  -->
    <string name="yuk_selesaikan_project_kamu">Yuk selesaikan project kamu</string>
    <string name="periode_project">Periode Project</string>
    <string name="date_project_periode">15 Oktober - 31 Oktober</string>
    <string name="company">PT ZENIUS INDONESIA</string>
    <string name="desc_project_min">Video Pembelajaran</string>
    <string name="item_count_reward">8</string>
    <string name="item_progress">Project Terselesaikan</string>
    <string name="logout">Logout</string>
    <string name="greeting_umkm">Selamat datang di DiTalent.</string>
    <string name="search_talent">Cari talent…</string>
    <string name="top_talent">Top Talent</string>
    <string name="cta_see_all">Lihat Semua</string>
    <string name="tets_go">Ayoo!</string>
    <string name="desc_lets_go">Buat project kamu untuk meningkatkan penjualan kamu !</string>
    <string name="desc_banner_umkm">Iklankan bisnis Anda dengan influencer yang sesuai dan lebih baik dengan citra bisnis Anda.</string>
    <string name="banner">Banner</string>
    <string name="avatar">Avatar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="filter">Filter</string>
    <string name="message_logout">Kamu yakin untuk keluar ?</string>
    <string name="yap">Yap</string>
    <string name="clear">Clear</string>
    <string name="apply">Terapkan</string>
    <string name="gender">Jenis kelamin</string>
    <string name="sort">Urutkan</string>
    <string name="rate">Rate</string>
    <string name="rating">Rating</string>
    <string name="followers">Followers</string>
    <string name="high_rate">Rate Tertinggi</string>
    <string name="low_rate">Harga Terendah</string>
    <string name="in_new">Terbaru</string>
    <string name="highest">Tertinggi</string>
    <string name="lowest">Terendah</string>
    <string name="male">Laki-Laki</string>
    <string name="female">Perempuan</string>
    <string name="high_followers">Followers Tertinggi</string>
    <string name="low_followers">Followers Terendah</string>
    <string name="four_up_rating">4 Keatas</string>


</resources>