<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home_talent_nav"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />
    <item
        android:id="@+id/project_talent_nav"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_project"
        android:title="@string/project" />

    <item
        android:id="@+id/reward_talent_nav"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_rewards"
        android:title="@string/reward" />

    <item
        android:id="@+id/profile_talent_nav"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_profile"
        android:title="@string/profil" />
</menu>