<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home_umkm_nav"
        android:icon="@drawable/ic_home"
        android:title="@string/home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/project_umkm_nav"
        android:icon="@drawable/ic_project"
        android:title="@string/project"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/empty"
        android:enabled="false"
        android:title="" />

    <item
        android:id="@+id/chart_umkm_nav"
        android:icon="@drawable/ic_chart"
        android:title="@string/chart"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/profile_umkm_nav"
        android:icon="@drawable/ic_profile"
        android:title="@string/profil"
        app:showAsAction="ifRoom" />


</menu>