<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.auth.fragments.login.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/root_padding">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_title_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.DiTalent.Headline6"
            android:textColor="@color/orange"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_logo_text"
            android:layout_width="193dp"
            android:layout_height="74dp"
            android:layout_marginTop="@dimen/margin_logo_text_top"
            android:contentDescription="@string/logo"
            android:src="@drawable/logo_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title_login" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_description_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_logo_text_bottom"
            android:text="@string/description_page_login"
            android:textAppearance="@style/TextAppearance.DiTalent.Body2"
            android:textColor="@color/textColorSecondary"
            app:layout_constraintTop_toBottomOf="@id/iv_logo_text" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_title_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="42dp"
            android:text="@string/email"
            android:textAppearance="@style/TextAppearance.DiTalent.Subtitle2"
            app:layout_constraintTop_toBottomOf="@id/tv_description_login" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_edt_email"
            style="@style/Widget.DiTalent.LayoutInputText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_layout_text_to_title"
            app:layout_constraintTop_toBottomOf="@id/tv_title_email">

            <com.capstone.ditalent.component.InputText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_height_edt"
                android:hint="@string/hint_email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:padding="0dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_title_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/gutter_layout_text"
            android:text="@string/password"
            android:textAppearance="@style/TextAppearance.DiTalent.Subtitle2"
            app:layout_constraintTop_toBottomOf="@id/layout_edt_email" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_edt_password"
            style="@style/Widget.DiTalent.LayoutInputText.Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_layout_text_to_title"
            app:layout_constraintTop_toBottomOf="@id/tv_title_password">

            <com.capstone.ditalent.component.InputText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_height_edt"
                android:hint="@string/hint_password"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="0dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/gutter_layout_text"
            android:text="@string/forgot_password"
            android:textAlignment="textEnd"
            android:textAppearance="@style/TextAppearance.DiTalent.Button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_edt_password" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login"
            style="@style/Widget.DiTalent.Button.Filled"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_button_login_register_top"
            android:text="@string/enter"
            app:layout_constraintTop_toBottomOf="@id/tv_forgot_password" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/divider_1"
            android:layout_width="0dp"
            android:layout_height="@dimen/size_divider"
            app:layout_constraintBottom_toBottomOf="@id/tv_or"
            app:layout_constraintEnd_toStartOf="@id/tv_or"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_or" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/divider_2"
            android:layout_width="0dp"
            android:layout_height="@dimen/size_divider"
            app:layout_constraintBottom_toBottomOf="@id/tv_or"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_or"
            app:layout_constraintTop_toTopOf="@id/tv_or" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/root_small_margin"
            android:layout_marginTop="@dimen/root_large_margin"
            android:text="@string/or"
            android:textColor="?colorAccent"
            android:textAppearance="@style/TextAppearance.DiTalent.Subtitle1"
            app:layout_constraintEnd_toStartOf="@id/divider_2"
            app:layout_constraintStart_toEndOf="@id/divider_1"
            app:layout_constraintTop_toBottomOf="@id/btn_login" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login_with_google"
            style="@style/Widget.DiTalent.Button.Outlined"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/root_large_margin"
            android:layout_marginBottom="@dimen/root_padding"
            app:icon="@drawable/ic_google"
            android:text="@string/text_button_login_using_google"
            app:layout_constraintTop_toBottomOf="@id/tv_or" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_title_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_button_login_register_top"
            android:text="@string/dont_have_a_account"
            android:textAppearance="@style/TextAppearance.DiTalent.Caption"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tv_register"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_login_with_google"
            app:layout_constraintVertical_bias="1.0" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/gutter_layout_text"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/sign_up"
            android:textAppearance="@style/TextAppearance.DiTalent.Button"
            android:textColor="@color/orange"
            app:layout_constraintBaseline_toBaselineOf="@id/tv_title_register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_title_register" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>