<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="@dimen/root_padding"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <ImageView
        android:id="@+id/iv_choose_role"
        android:layout_width="246dp"
        android:layout_height="200dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/image_boarding"
        android:scaleType="centerCrop"
        android:src="@drawable/slide_board_1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_title_choose_role"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_your_role"
        android:layout_marginTop="@dimen/root_large_margin"
        android:textAppearance="@style/TextAppearance.DiTalent.Subtitle1"
        app:layout_constraintTop_toBottomOf="@id/iv_choose_role" />

    <RadioGroup
        android:id="@+id/rg_choose_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/root_medium_margin"
        android:layout_marginBottom="@dimen/root_medium_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/tv_title_choose_role">

        <RadioButton
            android:id="@+id/rb_choose_umkm"
            style="@style/Widget.DiTalent.RadioButton.Role"
            android:layout_width="wrap_content"
            android:layout_marginEnd="@dimen/gutter_horizontal_radio_button"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/umkm" />

        <RadioButton
            android:id="@+id/rb_choose_talent"
            style="@style/Widget.DiTalent.RadioButton.Role"
            android:layout_width="wrap_content"
            android:layout_marginStart="@dimen/gutter_horizontal_radio_button"
            android:layout_weight="1"
            android:text="@string/talent" />

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>